Spring microservice