@@ -7,32 +7,24 @@
     <version>1.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>AsteroidsFX</name>
-    <repositories>
-    </repositories>
 
-    <modules>
-        <module>Core</module>
-        <module>Common</module>
-        <module>Player</module>
-        <module>Bullet</module>
-        <module>CommonBullet</module>
-        <module>CommonAsteroids</module>
-        <module>Asteroids</module>
-        <module>Collision</module>
-        <module>Enemy</module>
-        <module>CommonEnemy</module>
-        <module>Scoring</module>
-    </modules>
     <properties>
         <java>java</java>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>        
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
-        <spring.version>6.1.3</spring.version>
+        <spring-boot.version>3.1.4</spring-boot.version>
     </properties>
     
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring-boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
             <dependency>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-controls</artifactId>
@@ -48,53 +40,46 @@
                 <artifactId>javafx-base</artifactId>
                 <version>21.0.2</version>
             </dependency>
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-context</artifactId>
-                <version>${spring.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-core</artifactId>
-                <version>${spring.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-beans</artifactId>
-                <version>${spring.version}</version>
-            </dependency>        
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-aop</artifactId>
-                <version>${spring.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-expression</artifactId>
-                <version>${spring.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-jcl</artifactId>
-                <version>${spring.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.integration</groupId>
-                <artifactId>spring-integration-core</artifactId>
-                <version>${spring.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-web</artifactId>
-                <version>${spring.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot</artifactId>
-                <version>3.1.4</version>
-            </dependency>
         </dependencies>
-    </dependencyManagement>    
+    </dependencyManagement>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>${spring-boot.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
+            <version>${spring-boot.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+            <version>${spring-boot.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>6.0.11</version>
+        </dependency>
+    </dependencies>
+
+    <modules>
+        <module>Core</module>
+        <module>Common</module>
+        <module>Player</module>
+        <module>Bullet</module>
+        <module>CommonBullet</module>
+        <module>CommonAsteroids</module>
+        <module>Asteroids</module>
+        <module>Collision</module>
+        <module>Enemy</module>
+        <module>CommonEnemy</module>
+        <module>Scoring</module>
+    </modules>
+
     <build>
         <plugins>
             <plugin>
@@ -108,11 +93,10 @@
                     <fork>true</fork>
                 </configuration>
             </plugin>
-            <!-- execute the resulting project -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
-                <version> 3.5.0</version>
+                <version>3.5.0</version>
                 <executions>
                     <execution>
                         <goals>
@@ -125,17 +109,12 @@
                     <workingDirectory>.</workingDirectory>
                     <arguments>
                         <argument>--module-path=mods-mvn</argument>
-                        <argument>--class-path=libs/*</argument>
-
-                        <!-- because spark.core is an automatic module and actually required,
-                        monitor.observer.zero would be resolved as well and does not need
-                        to be added explicitly;
-                        I still wanted to do it for clarity, but for some reason that results
-                        in "java.lang.module.FindException: Module monitor.observer.zero not found";
-                        strange... -->
-                        <!--                        <argument>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=127.0.0.1:8000</argument>-->
+                        <argument>--class-path=libs/*:${settings.localRepository}/org/springframework/boot/spring-boot/${spring-boot.version}/*:${settings.localRepository}/org/springframework/spring-web/6.0.11/*</argument>
                         <argument>--module=Core/dk.sdu.mmmi.cbse.main.Main</argument>
-                        <argument>--add-modules javafx.graphics</argument>
+                        <argument>--add-modules</argument>
+                        <argument>javafx.graphics,spring.core,spring.beans,spring.context</argument>
+                        <argument>--add-opens</argument>
+                        <argument>java.base/java.lang=spring.core</argument>
                     </arguments>
                 </configuration>
             </plugin>
@@ -144,7 +123,6 @@
 
     <profiles>
         <profile>
-            <!-- parent project should delete 'mods-mvn' -->
             <id>parent-project</id>
             <activation>
                 <file>
@@ -171,7 +149,6 @@
             </build>
         </profile>
         <profile>
-            <!-- child projects should copy artifact into 'mods-mvn' -->
             <id>child-project</id>
             <activation>
                 <file>
